2007-09-04 Franz Holzinger  <kontakt@fholzinger.com>
	* fix bug with having same html ids many times when more records are shown

2007-08-29 Franz Holzinger  <kontakt@fholzinger.com>
	* fix bug with wrong $row variable in tx_srfeuserregister_tca
	* start with encoding in renderCharset

2007-08-14 Franz Holzinger  <kontakt@fholzinger.com>
	* fix bug with no editing possible for sr_email_subscribe and a setfixed link
	* fix bug 5609: informal texts did not work
	* fix bug with not saved entries for mm relations
	* fix bug when delete did not work with setfixed becaue the cmd has been overridden by restored regHash value

2007-07-12 Franz Holzinger  <kontakt@fholzinger.com>
	* fix bug 5291: new translations for Dutch by Felippe van Eekhout <feekhout@worldonline.nl>

2007-06-16 Franz Holzinger  <kontakt@fholzinger.com>
	* fix bug with autocreation of usernames
	* new classes for setfixed, control data and url functions
	* fix bug with not shown status field in backend

2007-06-11 Franz Holzinger  <kontakt@fholzinger.com>
	* rename ###EMAIL_TEMPLATE_INFOMAIL_EMPTY### back to ###TEMPLATE_INFOMAIL### because it is not sent in an email
	* fix bug 5766: no notification emails have been sent due to wrong $templateCode variable.

2007-06-07 Franz Holzinger  <kontakt@fholzinger.com>
	* fix bug with missing getTemplateCode function in data object

2007-06-04 Franz Holzinger  <kontakt@fholzinger.com>
	* fix bug 5329: The inError property has been missing in the data object
	* fix bug 5687: setfixed could not be turned off

2007-05-29 Franz Holzinger  <kontakt@fholzinger.com>
	* fix bug 5256: replace also the ',' in str_replace in order not avoid replacement of other fields with the same name but from other extensions.
	* fix bug 5397: images could not be uploaded and have not been shown

2007-05-26 Franz Holzinger  <kontakt@fholzinger.com>
	* fix bug 5641: modifications needed to make sr_email_subsribe working again

2007-05-18 Franz Holzinger  <kontakt@fholzinger.com>